@@ -58,7 +58,7 @@ role PDF::COS::Tie {
 
         multi method tie(IndRef $lval is rw) { $lval } # undereferenced - don't know it's type yet
 	multi method tie($lval is rw, :$check) {
-            if $lval.defined && ! ($lval ~~ $!type) {
+            if $lval.defined && $lval !~~ $!type {
 
                 my \reader  = $lval.?reader;
 
@@ -110,7 +110,7 @@ role PDF::COS::Tie {
                                 unless $_ ~~ $!type;
                         }
                     }
-                    $lval.reader  //= $_ with reader;
+                    $lval.reader //= $_ with reader;
                 }
             }
             else {
@@ -122,8 +122,8 @@ role PDF::COS::Tie {
 	    $lval;
 	}
 
-	multi method tie($lval is copy) is default {
-	    $.tie($lval);
+	multi method tie($lval is copy, :$check) is default {
+	    $.tie($lval, :$check);
 	}
 
     }
