@@ -32,14 +32,19 @@ role PDF::COS::Tie::Array does PDF::COS::Tie {
        }
     }
 
+    method check {
+        self.AT-POS($_, :check)
+            for 0 ..^ max(@!index, self);
+        self
+    }
+
     #| for array lookups, typically $foo[42]
     method AT-POS($pos, :$check) is rw {
         my $val := callsame;
-	my Attribute \att = $.index[$pos] // $.of-att;
-
         $val := $.deref(:$pos, $val)
 	    if $val ~~ Pair | List | Hash;
 
+	my Attribute \att = $.index[$pos] // $.of-att;
         .tie($val, :$check) with att;
 	$val;
     }
