@@ -1,6 +1,6 @@
 use v6;
 use Test;
-plan 8;
+plan 9;
 
 use PDF::COS::Dict;
 use PDF::COS::Type::Info;
@@ -42,3 +42,4 @@ is $catalog.Info.CreationDate.year, 1997, 'Info.CreationDate.year';
 is ~ $catalog.Info.CreationDate, "D:19970915110347-08'00'", 'Info.CreationDate stringification';
 isa-ok $catalog.Info.Title, ::('PDF::COS::TextString'), 'Info.Title';
 is $catalog.Info.Title, "PostScript Language Reference, Third Edition", 'Info.Title';
+lives-ok {$catalog.check}, '.check lives';
